remove the factory service

--- a/api/emails/password-confirm.pug
+++ b/api/emails/password-confirm.pug
@@ -1,11 +1,11 @@
 extends index 
 block title
-	h1 Your password reset needs to be confirmed
+	h1 Reset your password
 block description
 	div
-		p #{login}, please take a moment to confirm your password reset by clicking the button below:
+		p #{login}, please take a moment to reset your password by clicking the button below:
 	div
-		a(href=`${process.env.CLIENT_URL}/confirm-password?confirmToken=${token}`) Confirm your password reset
+		a(href=`${process.env.CLIENT_URL}/password-reset?resetToken=${token}`) Reset your password
 	div
 		p This link is only available for an hour.
 
