--- a/api/emails/password-confirm.pug
+++ b/api/emails/password-confirm.pug
@@ -5,7 +5,7 @@ block description
 	div
 		p #{login}, please take a moment to reset your password by clicking the button below:
 	div
-		a(href=`${process.env.CLIENT_URL}/password-reset?resetToken=${token}`) Reset your password
+		a(href=`${process.env.CLIENT_URL}/password-reset?confirmToken=${token}`) Reset your password
 	div
 		p This link is only available for an hour.
 
