set correct event url

--- a/api/emails/event-published.pug
+++ b/api/emails/event-published.pug
@@ -5,4 +5,4 @@ block description
 	div
 		p #{companyName} has just published a new event #{eventName}
 	div
-		a(href=`${process.env.CLIENT_URL}/event-page`) Open event page
+		a(href=`${process.env.CLIENT_URL}/events/${eventId}`) Open event page
