--- a/api/emails/event-reminder.pug
+++ b/api/emails/event-reminder.pug
@@ -5,4 +5,4 @@ block description
 	div
 		p The event '#{eventName}' will start at #{eventDate}
 	div
-		a(href=`${process.env.CLIENT_URL}/event-page`) Open event page
+		a(href=`${process.env.CLIENT_URL}/events/${eventId}`) Open event page
