--- a/api/emails/event-subscription.pug
+++ b/api/emails/event-subscription.pug
@@ -5,4 +5,4 @@ block description
 	div
 		p You have successfully payed for and subscribed to `#{eventName}` which will happen on #{eventDate}
 	div
-		a(href=`${process.env.CLIENT_URL}/event-page`) Open event page
+		a(href=`${process.env.CLIENT_URL}/events/${eventId}`) Open event page
