--- a/api/emails/new-visitor-notification.pug
+++ b/api/emails/new-visitor-notification.pug
@@ -5,4 +5,4 @@ block description
 	div
 		p #{visitorName} has subscribed to your `#{eventName}` event
 	div
-		a(href=`${process.env.CLIENT_URL}/event-page`) Open event page
+		a(href=`${process.env.CLIENT_URL}/events/${eventId}`) Open event page
