--- a/api/emails/index.css
+++ b/api/emails/index.css
@@ -1,50 +1,55 @@
 * {
-	margin: 0 auto;
-	box-sizing: border-box;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	font-family: sans-serif;
-	width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: sans-serif;
+  width: 70%;
+  padding: 40px 10px;
 }
 
 header {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 main {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	margin-top: 15px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
 }
 
 h1 {
-	font-size: 18px;
-	font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 p {
-	font-size: 14px;
+  font-size: 16px;
+  text-align: center;
 }
 
 div:not(:first-child) {
-	display: inline-block;
-	width: auto;
-	margin-top: 14px;
+  display: inline-block;
+  width: auto;
+  margin-top: 14px;
 }
 
 div a {
-	display: inline-block;
-	padding: 16px 20px;
-	border-radius: 8px;
-	background-color: rgb(31, 30, 30);
-	text-decoration: none;
-	color: white;
+  display: inline-block;
+  padding: 16px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  background-color: #3182ce;
+  text-decoration: none;
+  text-align: center;
+  color: white;
 }
